@@ -5,7 +5,8 @@ TODO
 2. Add tests.
 7. Test with data().
 8. Test with data_css().
-9.
+9. Test with data_init().
+10.
 
 Applied
 =======
